@@ -1,3 +1,8 @@
+2007-01-31  DJ Delorie  <dj@redhat.com>
+
+	* elf-m10300.c (mn10300_elf_relocate_section): Clarify the warning
+	message for dangerous relocs, special case the common user error.
+
 2007-01-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elf.c (copy_elf_program_header): Start from the first section
